Changes to hide warnings I can't fix.